# python_learning_projects

./: .env.example  .gitignore  CLAUDE.md  DECISION_LOG.md  DEVELOPMENT_STATE.md  Dockerfile  PROJECT_BLUEPRINT.md  PROJECT_CONTEXT.json  PROJECT_REBUILD_PROMPT.md  PROJECT_REVIEW_1.1.0.md  README.md  SECURITY.md  SECURITY_AUDIT_1.2.0.md  UPDATE_NOTES_1.1.0.md  alembic.ini  docker-compose.yml  pyproject.toml
ai_school_assistant/backend/: Dockerfile  pyproject.toml
ai_school_assistant/backend/app/: __init__.py  main.py
ai_school_assistant/backend/tests/: test_health.py
kalanfa/: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierrc.js  .readthedocs.yaml  .stylelintrc.js  ATTRIBUTION.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  DECISION_LOG.md  DEVELOPMENT_STATE.md  MANIFEST.in  MASTER_PROMPT.json  MASTER_PROMPT.md  Makefile  PROJECT_BLUEPRINT.md  PROJECT_CONTEXT.json  PROJECT_REBUILD_PROMPT.md  README.md  UPSTREAM_KOLIBRI_AGENTS.md  UPSTREAM_KOLIBRI_CLAUDE.md  babel.config.js  crowdin.yml  docker-compose.yml  eslint.config.mjs  funding.json  jest.conf.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  setup.py
kalanfa/.pre-commit-hooks/: check_lfs_pointers.py  sync_scaffold_versions.py
kalanfa/build_tools/: __init__.py  build_plugins.txt  customize_build.py  customize_docker_envlist.py  customize_requirements.py  install_cexts.py  logo.py  preseed_home.sh  read_whl_version.py
kalanfa/build_tools/i18n/: cleanup_unsupported_languages.py  fonts.py  generate_mapping.py  noto_source.py  nutritionfacts_i18n.py  utils.py
kalanfa/deployment/messagerie/: docker-compose.yml
kalanfa/docker/: Dockerfile  Makefile  README.md  entrypoint.sh
kalanfa/docs/: code_quality.rst  conf.py  development_workflow.rst  getting_started.rst  i18n.rst  index.rst  release_process.rst  stack.rst  testing.rst
kalanfa/docs/_static/: theme_overrides.css
kalanfa/docs/adr/: ADR-006-messagerie.md
kalanfa/docs/backend_architecture/: api_patterns.rst  dist_build_pipeline.rst  index.rst  plugins.rst  tasks.rst  testing.rst  upgrade.rst
kalanfa/docs/build_system/: index.md
kalanfa/docs/contributing/: code_of_conduct.rst  ways_to_contribute.rst
kalanfa/docs/dataflow/: index.rst
kalanfa/docs/frontend_architecture/: HTML5_API.rst  components.rst  composables.rst  conventions.rst  core.rst  dependencies.rst  frontend_build_pipeline.rst  index.rst  layout.rst  single_page_apps.rst  testing_layout.rst  unit_testing.rst  vuex.rst
kalanfa/docs/howtos/: another_kalanfa_instance.md  dev_data_setup.md  development_with_kds.md  index.rst  multi_agent_setup.md  nodeenv.md  preview_on_mobile.md  pyenv_virtualenv.md  python_monorepo.md  reviewing_pull_requests.md  working_with_urls_and_api_endpoints.md
kalanfa/docs/manual_testing/: index.rst
kalanfa/integration_testing/: smoke_test.py
kalanfa/integration_testing/016-features/: kalanfa-critical-workflows.feature
kalanfa/integration_testing/018-features/: README.md  kalanfa-critical-workflows.feature  kolibri-critical-workflows.feature
kalanfa/integration_testing/019-features/: kalanfa-critical-workflows.feature  kalanfa-integration-testing.feature  kolibri-critical-workflows.feature  kolibri-integration-testing.feature
kalanfa/integration_testing/custom-html5-apps/: kalanfa-html5-api.feature
kalanfa/integration_testing/development_plugin/: kalanfa_plugin.py
kalanfa/integration_testing/load_testing/: .gitignore  kalanfa_client.py  kolibri_client.py  lesson_resources.json  loadtest.py  locustfile.py  logger.py  recorder.py  utils.py
kalanfa/integration_testing/scripts/: viewset_serialization_benchmark.py
kalanfa/kalanfa/: __init__.py  __main__.py  conftest.py  main.py
kalanfa/kalanfa/core/: api.py  api_urls.py  apps.py  buildConfig.js  decorators.py  error_constants.py  errors.py  fields.py  hooks.py  kalanfa_plugin.py  oidc_provider_hook.py  package.json  routers.py  serializers.py  theme_hook.py  upgrade.py  urls.py  views.py
kalanfa/kalanfa/locale/: glossary.tbx
kalanfa/kalanfa/plugins/: __init__.py  hooks.py  registry.py
kalanfa/kalanfa/utils/: __init__.py  android.py  cli.py  conf.py  data.py  database.py  debian_check.py  env.py  file_transfer.py  filesystem.py  http_session.py  (+11 more)
kalanfa/kolibri/: __init__.py  __main__.py  conftest.py
kalanfa/python_packages/: README.md
kalanfa/scripts/: bump_version.sh  npm_check_published.sh  npm_provenance.sh  npm_publish.sh  pypi_publish.sh  update_contributors.py
kalanfa/test/: do_mock_provisioning.py  ensure_kalanfa_stops_within_time.sh  ensure_no_kalanfas_running_on_port.sh  test_cext.py  test_cli_at_import.py  test_env_compat.py  test_install_cexts.py
nko-voice-transcriptor/: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  NKO_RESOURCES.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
nko-voice-transcriptor/android/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
nko-voice-transcriptor/app/: __init__.py  config.py  correction.py  db.py  dictionary.py  languages.py  limits.py  llm.py  logging_conf.py  main.py  media.py  metrics.py  models.py  schemas.py  security.py
nko-voice-transcriptor/deploy/: admin-dashboard.py  check-vps-readiness.sh  configure-kolibri-studio.sh  deploy-ubuntu.sh  install-admin-dashboard.sh  install-backend.sh  update-ubuntu.sh
nko-voice-transcriptor/docs/: ASR_ENGINES.md  NKO_UNICODE_BLOCK.md
nko-voice-transcriptor/ios/: README.md  project.yml
nko-voice-transcriptor/scripts/: build_offline_assets.py  build_seed_langpacks.py  evaluate_pipelines.py  export_training_dataset.py  train-mms-adapter.sh
nko-voice-transcriptor/tests/: conftest.py  test_admin_dashboard.py  test_android_client.py  test_api.py  test_asr.py  test_dictionary.py  test_history_mgmt.py  test_langpack.py  test_language_pack.py  test_languages.py  test_llm.py  test_media.py  test_metrics.py  test_mobile_upgrade.py  test_nko_unicode.py  test_training_flow.py  test_transliterator.py  test_voice_smoke.py
(+5268 files in other folders)
