[project]
name = "ems-backend"
version = "3.0.0"
description = "Event Management System — PQC-signed QR ticketing, Stripe payments, badges (master prompt v3.0)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.0",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",
    "alembic==1.18.5",
    "geoalchemy2==0.20.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "argon2-cffi==25.1.0",
    "bcrypt==5.0.0",
    "pyjwt[crypto]==2.13.0",
    "cryptography>=44.0.0",
    "webauthn==3.0.0",
    "pyotp==2.10.0",
    "valkey==6.1.1",
    "stripe==15.3.0",
    "segno==1.6.6",
    "opentelemetry-sdk==1.43.0",
    "opentelemetry-exporter-otlp==1.43.0",
    "opentelemetry-instrumentation-fastapi==0.64b0",
    "opentelemetry-instrumentation-sqlalchemy==0.64b0",
]

[project.optional-dependencies]
# ML-DSA-65 (FIPS 204) via liboqs. Requires the liboqs C library at runtime
# (compiled in the Docker builder stage). Without it the hybrid signer runs
# HMAC-only, which is refused unless EMS_PQC_ALLOW_HMAC_ONLY=true (dev/test).
pqc = ["liboqs-python==0.15.0"]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
    "ruff==0.15.20",
    "mypy==2.1.0",
    "locust==2.44.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = ["oqs", "oqs.*", "segno", "segno.*", "locust", "locust.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "db: requires PostgreSQL (PostGIS) and a Valkey/Redis-compatible server",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]
