[project]
name = "nko-voice-transcriptor"
version = "1.11.0"
description = "Speech-to-N'Ko transcription web app for Bambara (Manding)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = [
    "S101",  # assert is fine in tests
    "B008",  # FastAPI's Depends() in argument defaults is the framework idiom
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]  # hard-coded test credentials are intentional
