[project]
name = "ai-school-assistant-backend"
version = "0.1.0"
description = "AI School Assistant — backend API (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "A", "C4", "T20", "RUF"]
ignore = ["S104"]  # binding 0.0.0.0 is intentional inside containers

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts are the point of tests

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
