[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "kalanfa-opensearch-plugin"
version = "0.0.3"
description = "Kalanfa plugin to provide an OpenSearch compatible API"
readme = "README.md"
# Matches root Kalanfa's floor, not this plugin's own tested range (see the
# "Programming Language :: Python" classifiers below) — kept in sync with root
# so `uv sync --python <version>` at the repo root doesn't fail workspace-wide
# on this member's requires-python. The plugin's own CI only ever ran on 3.9+.
requires-python = ">=3.6, <3.15"
license = "MIT"
authors = [{ name = "Learning Equality", email = "info@learningequality.org" }]
keywords = ["kalanfa", "opensearch", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "kalanfa>=0.15",
    "feedgenerator==2.0.0",
]

[project.urls]
Homepage = "https://github.com/learningequality/kalanfa"
Repository = "https://github.com/learningequality/kalanfa"

[project.entry-points."kalanfa.plugins"]
kalanfa_opensearch_plugin = "kalanfa_opensearch_plugin"

[dependency-groups]
dev = [
    { include-group = "lint" },
    "prek; python_version >= '3.8'",
]
lint = [
    "ruff",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["kalanfa_opensearch_plugin*"]

[tool.uv.sources]
kalanfa = { workspace = true }

[tool.uv]
default-groups = ["dev"]
