[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "kalanfa-sync-extras-plugin"
version = "0.2.2"
description = "Kalanfa plugin that provides extra features for peer-to-peer syncing"
readme = "README.md"
# Matches root Kalanfa's floor, not this plugin's own tested range (see the
# "Programming Language :: Python" classifiers below) — kept in sync with root
# so `uv sync --python <version>` at the repo root doesn't fail workspace-wide
# on this member's requires-python. The plugin's own CI only ever runs on 3.9+.
requires-python = ">=3.6, <3.15"
license = "MIT"
authors = [{ name = "Learning Equality", email = "info@learningequality.org" }]
keywords = ["kalanfa", "syncing", "morango"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "kalanfa>=0.15",
    "morango>=0.6.13",
]

[project.urls]
Homepage = "https://github.com/learningequality/kalanfa-sync-extras-plugin"
Repository = "https://github.com/learningequality/kalanfa-sync-extras-plugin"

[project.entry-points."kalanfa.plugins"]
kalanfa_sync_extras_plugin = "kalanfa_sync_extras_plugin"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "prek; python_version >= '3.8'",
]
lint = [
    "ruff",
]
test = [
    "mock",
    "pytest",
    "pytest-django",
    "pytest-env",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["kalanfa_sync_extras_plugin*"]

[tool.uv.sources]
kalanfa = { workspace = true }

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["test/"]
norecursedirs = ["dist", "tmp*", ".git", ".*"]
django_find_project = false
env = [
    "DJANGO_SETTINGS_MODULE=kalanfa.deployment.default.settings.test",
    "KALANFA_HOME=.kalanfa",
]
filterwarnings = [
    "ignore:::kalanfa.*:",
    "ignore:::django.*:",
    "ignore:::rest_framework.*:",
    "ignore:::morango.*:",
]
