[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "kolibri-oidc-client-plugin"
version = "0.3.2"
description = "A Kolibri plugin providing OpenID Connect client (SSO) login"
readme = "README.md"
# Matches root Kolibri's floor, not this plugin's own tested range (see the
# "Programming Language :: Python" classifiers below) — kept in sync with root
# so `uv sync --python <version>` at the repo root doesn't fail workspace-wide
# on this member's requires-python. The plugin's own CI only ever ran on 3.9+.
requires-python = ">=3.6, <3.15"
license = "MIT"
authors = [{ name = "Learning Equality", email = "info@learningequality.org" }]
keywords = ["kolibri", "oidc", "sso", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "kolibri>=0.20.0",
    "mozilla-django-oidc==1.2.4",
]

[project.urls]
Homepage = "https://github.com/learningequality/kolibri"
Repository = "https://github.com/learningequality/kolibri"

[project.entry-points."kolibri.plugins"]
kolibri_oidc_client_plugin = "kolibri_oidc_client_plugin"

[dependency-groups]
dev = [
    { include-group = "lint" },
    "prek; python_version >= '3.8'",
]
lint = ["ruff"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["kolibri_oidc_client_plugin*"]

[tool.setuptools.package-data]
kolibri_oidc_client_plugin = ["static/**/*.svg"]

[tool.uv.sources]
kolibri = { workspace = true }

[tool.uv]
default-groups = ["dev"]
